--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
 
 html {
   box-sizing: border-box;
+  font-family: 'Roboto', sans-serif;
 }
 *, *:before, *:after {
   box-sizing: inherit;
@@ -23,7 +24,9 @@ body {
   line-height: 147%;
 }
 
-h1 {}
+h1 {
+  align-self: center;
+}
 
 h2 {}
 
@@ -31,6 +34,7 @@ h3 {}
 
 p {
   margin: 0;
+  align-self: center;
 }
 
 
@@ -54,7 +58,14 @@ p {
 }
 
 .container {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
   margin: 0 auto;
+  max-width: 400px;
+  height: 90vh;
+  background-color: azure;
+  border: 1px dotted blue;
 }
 
 section {
@@ -66,9 +77,13 @@ section {
 
 .info-text {
   display: flex;
+  justify-content: space-around;
 }
 
-.score-text .score-num {
+.score-text{
+  align-self: flex-start;
+}
+.score-num {
   align-self: flex-start;
 }
 
@@ -76,24 +91,62 @@ section {
   align-self: flex-end;
 }
 
-@media (min-width: 768px) {
+/*@media (min-width: 768px) {
   .container {
-    max-width: 728px;
+    max-width: 400px;
     margin: 0 auto;
   }
 }
-
+*/
 
 
 
 /* ---- components ---- */
 
-.button {
-  width: 100%;
-  background-color: blue;
-  color: #fff;
-  border: 1px solid #fff
+button {
+  align-self: center;
+  border-radius: 4px;
+  background-color: rgb(0, 119, 255);
+  border: none;
+  color: #FFFFFF;
+  text-align: center;
+  font-size: 24px;
+  width: 150px;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin: 7px;
+  padding: 5px;
 }
+
+button span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
+}
+
+button span:after {
+  content: '\00bb';
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 0.5s;
+}
+button:hover {
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
+
+button:hover span {
+  padding-right: 25px;
+  
+}
+
+button:hover span:after {
+  opacity: 1;
+  right: 0;
+}
+
 
 .button-alt {
   color: blue;
@@ -104,5 +157,4 @@ section {
 
 canvas {
   
-  border: 1px solid black;
 }
