--- a/css/style.css
+++ b/css/style.css
@@ -174,6 +174,22 @@ p {
 
 /* ---- components ---- */
 
+#select {
+  align-self: center;
+  border-radius: 4px;
+  background-color: rgb(0, 119, 255);
+  border: none;
+  color: #FFFFFF;
+  text-align: center;
+  font-size: 24px;
+  width: 150px;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin: 7px;
+  padding: 5px;
+  display: inline-block;
+}
+
 button {
   align-self: center;
   border-radius: 4px;
