--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,7 @@ p {
   margin: 0 auto;
   max-width: 400px;
   height: 700px;
-  background: url('../images/bg-gamescreen.png');
+  background: url('../images/bg-gamescreen.gif');
   background-position: bottom;
 }
 
